--- a/src/MerchandiseService/MerchandiseService.csproj
+++ b/src/MerchandiseService/MerchandiseService.csproj
@@ -13,6 +13,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MerchandiseService.Grpc\MerchandiseService.Grpc.csproj" />
+      <ProjectReference Include="..\MerchandiseService.HttpModels\MerchandiseService.HttpModels.csproj" />
+      <ProjectReference Include="..\MerchandiseService.Infrastructure\MerchandiseService.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
