--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,74 @@ version: "3.8"
 services:
   merchandise-service:
     image: "merchandise-service:latest"
+    environment:
+      DbConfiguration__ConnectionString: "Host=host.docker.internal;Port=5428;Database=merchandise-service;Username=postgres;Password=postgres"
+    depends_on:
+      - merchandise-service-db
     ports:
       - "8080:80"
   stock-api:
     image: "ghcr.io/ozon-edu-csharp-2021/stock-api:main"
     hostname: stock_api
+    environment:
+      DatabaseConnectionOptions__ConnectionString: "Host=host.docker.internal;Port=5427;Database=stock-api;Username=postgres;Password=stockApiPassword"
+    depends_on:
+      - stock-api-db
+      
   emailing-service:
     image: "ghcr.io/ozon-edu-csharp-2021/emailing-service:main"
     hostname: emailing_service
   employees-service:
     image: "ghcr.io/ozon-edu-csharp-2021/employees-service:main"
     hostname: employees_service
+    depends_on:
+      - employees-service-db
+    volumes:
+      - ./src:/src
   supply-service:
     image: "ghcr.io/ozon-edu-csharp-2021/supply-service:main"
+    environment:
+      DbConfiguration__ConnectionString: "Host=host.docker.internal;Port=5426;Database=supply-service;Username=postgres;Password=supplyServicePassword"
     hostname: supply_service
+    depends_on:
+      - supply-service-db
+  supply-service-db:
+    image: postgres:latest
+    ports:
+      - "5426:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: supplyServicePassword
+      POSTGRES_DB: supply-service
+
+  employees-service-db:
+    image: postgres:latest
+    ports:
+      - "5425:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: employees-service
+    volumes:
+      - ./db/employees-service-postgres-db/dbdata:/var/lib/postgresql/data"
+
+  merchandise-service-db:
+    image: postgres:latest
+    ports:
+      - "5428:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: merchandise-service
+    command: "-c log_statement=all"
+    
+  stock-api-db:
+    image: postgres:latest
+    ports:
+      - "5427:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: stockApiPassword
+      POSTGRES_DB: stock-api
+      
+  
